correcciones 01.embeddings para repaso prueba 2 puntos